# beatportdl

./: .gitignore  Dockerfile  Dockerfile.windows  README.md  compose.yml  pyproject.toml
.github/workflows/: release.yml
bpdl/: __main__.py  api.py  artcheck.py  auth.py  banner.py  cli.py  config.py  download.py  events.py  handlers.py  history.py  links.py  models.py  notify.py  paths.py  scanner.py  search.py  tagging.py  templates.py  tui.py
bpdl/webui/: server.py
bpdl/webui/static/: app.js  index.html  manifest.json  style.css
cmd/beatportdl/: downloader.go  interactions.go  main.go  scanner.go  utils.go
config/: config.go
internal/beatport/: labels.go
scripts/: win_bpdl.py  win_bpdl_web.py
tests/: test_core.py
