[project]
name = "beatportdl-webui"
version = "2.4.0"
description = "beatportdl-webui — Beatport/Beatsource downloader web UI, Python rewrite dropping Go"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "mutagen>=1.47",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bpdl-web = "bpdl.webui.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bpdl*"]

[tool.setuptools.package-data]
"bpdl.webui" = ["static/*"]
